some styles are done..

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>German Gamboa | Contact</title>
-  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <header>
+    <span class="logo">German Gamboa</span>
+    <nav>
+      <ul><a href="index.html">Home</a></ul>
+      <ul><a href="portfolio.html">Portfolio</a></ul>
+      <ul><a href="contact.html">Contact</a></ul>
+    </nav>
+  </header>
+  <section class="container">
+    <form action="">
+      <legend>Contact</legend>
+      <fieldset>
+        <label for="name">Name:</label>
+        <input id="name" type="text" name="" value="">
+        <label for="email">Email:</label>
+        <input id="email" type="text" name="" value="">
+        <label for="msg">Message:</label>
+        <textarea id="msg" name="name" rows="8" cols="80"></textarea>
+      </fieldset>
+      <button type="button" name="button">Submit</button>
+    </form>
+
+  </section>
+  <footer>
+    <p>German Gamboa &copy; 2018</p>
+  </footer>
 
 </body>
 </html>
