--- a/index.html
+++ b/index.html
@@ -5,13 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>German Gamboa | Home</title>
-  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 <body>
   <header>
     <span class="logo">German Gamboa</span>
+    <nav>
+      <ul><a href="index.html">Home</a></ul>
+      <ul><a href="portfolio.html">Portfolio</a></ul>
+      <ul><a href="contact.html">Contact</a></ul>
+    </nav>
   </header>
+  <section class="container about-me">
+    <h1>About Me</h1>
+    <hr>
+    <img src="assets/images/IMG_0436.jpg" alt="A picture of German">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam incidunt laboriosam dolorem natus, aut porro ipsum consequuntur commodi itaque voluptatem reiciendis maxime blanditiis eveniet illum quidem obcaecati officiis placeat ratione, facere assumenda! Sapiente iste, perspiciatis expedita dicta incidunt inventore saepe similique ipsam sequi repudiandae odit ducimus sed aliquam rem itaque ut, porro ullam vel eius quaerat suscipit iure, asperiores tempore autem. Porro quod, neque veniam recusandae consectetur eveniet repellat quasi ratione harum totam accusamus id dolor iste, deleniti quo voluptatibus assumenda ad sapiente praesentium hic ullam! Porro inventore pariatur, quisquam magni. Voluptas repellat eaque provident temporibus at perspiciatis aperiam accusamus.</p>
+  </section>
+  <footer class="container">
+    <p>German Gamboa &copy; 2018</p>
+  </footer>
 
 </body>
 </html>
