--- a/portfolio.html
+++ b/portfolio.html
@@ -5,13 +5,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>German Gamboa | Home</title>
-  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
   <header>
     <span class="logo">German Gamboa</span>
+    <nav>
+      <ul><a href="index.html">Home</a></ul>
+      <ul><a href="portfolio.html">Portfolio</a></ul>
+      <ul><a href="contact.html">Contact</a></ul>
+    </nav>
   </header>
+  <section class="container">
+    <h1>Portfolio</h1>
+    <hr>
+    <div class="container">
+      <div class="card">
+        <img src="" alt="sample project img">
+        <h3>Cookies</h3>
+      </div>
+
+    </div>
+  </section>
+  <footer>
+    <p>German Gamboa &copy; 2018</p>
+  </footer>
+
 
 </body>
 </html>
