top section and nav bar finished

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <span class="logo">German Gamboa</span>
+    <span class="logo"><h1>German Gamboa</h1></span>
     <nav>
       <ul><a href="index.html">Home</a></ul>
       <ul><a href="portfolio.html">Portfolio</a></ul>
@@ -18,8 +18,9 @@
     </nav>
   </header>
   <section class="container">
+    <h1>Contact</h1>
+    <hr>
     <form action="">
-      <legend>Contact</legend>
       <fieldset>
         <label for="name">Name:</label>
         <input id="name" type="text" name="" value="">
