--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <span class="logo">German Gamboa</span>
+    <span class="logo"><h1>German Gamboa</h1></span>
     <nav>
       <ul><a href="index.html">Home</a></ul>
       <ul><a href="portfolio.html">Portfolio</a></ul>
