--- a/contact.html
+++ b/contact.html
@@ -9,30 +9,34 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header>
-    <span class="logo"><h1>German Gamboa</h1></span>
-    <nav>
-      <ul><a href="index.html">Home</a></ul>
-      <ul><a href="portfolio.html">Portfolio</a></ul>
-      <ul><a href="contact.html">Contact</a></ul>
-    </nav>
-  </header>
+  <div class="content">
+    <header>
+      <div class="wrapper">
+      <span class="logo"><h1>German Gamboa</h1></span>
+      <nav>
+        <ul><a href="index.html">Home</a></ul>
+        <ul><a href="portfolio.html">Portfolio</a></ul>
+        <ul><a href="contact.html">Contact</a></ul>
+      </nav>
+    </div>
+    </header>
   <section class="container">
     <h1>Contact</h1>
     <hr>
     <form action="">
-      <fieldset>
+    
         <label for="name">Name:</label>
         <input id="name" type="text" name="" value="">
         <label for="email">Email:</label>
         <input id="email" type="text" name="" value="">
         <label for="msg">Message:</label>
         <textarea id="msg" name="name" rows="8" cols="80"></textarea>
-      </fieldset>
+
       <button type="button" name="button">Submit</button>
     </form>
 
   </section>
+  </div>
   <footer>
     <p>German Gamboa &copy; 2018</p>
   </footer>
