--- a/portfolio.html
+++ b/portfolio.html
@@ -9,25 +9,48 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <header>
-    <span class="logo"><h1>German Gamboa</h1></span>
-    <nav>
-      <ul><a href="index.html">Home</a></ul>
-      <ul><a href="portfolio.html">Portfolio</a></ul>
-      <ul><a href="contact.html">Contact</a></ul>
-    </nav>
-  </header>
-  <section class="container">
+  <div class="content">
+    <header>
+      <div class="wrapper">
+      <span class="logo"><h1>German Gamboa</h1></span>
+      <nav>
+        <ul><a href="index.html">Home</a></ul>
+        <ul><a href="portfolio.html">Portfolio</a></ul>
+        <ul><a href="contact.html">Contact</a></ul>
+      </nav>
+    </div>
+    </header>
+  <section class="container group">
     <h1>Portfolio</h1>
     <hr>
-    <div class="container">
       <div class="card">
-        <img src="" alt="sample project img">
+        <img src="assets/images/card_test.jpeg" alt="sample project img">
+        <h3>Cookies</h3>
+      </div>
+      <div class="card">
+        <img src="assets/images/card_test.jpeg" alt="sample project img">
+        <h3>Cookies</h3>
+      </div>
+      <div class="card">
+        <img src="assets/images/card_test.jpeg" alt="sample project img">
+        <h3>Cookies</h3>
+      </div>
+      <div class="card">
+        <img src="assets/images/card_test.jpeg" alt="sample project img">
+        <h3>Cookies</h3>
+      </div>
+      <div class="card">
+        <img src="assets/images/card_test.jpeg" alt="sample project img">
+        <h3>Cookies</h3>
+      </div>
+      <div class="card">
+        <img src="assets/images/card_test.jpeg" alt="sample project img">
         <h3>Cookies</h3>
       </div>
 
-    </div>
+
   </section>
+</div>
   <footer>
     <p>German Gamboa &copy; 2018</p>
   </footer>
