--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,22 +7,27 @@
   <title>German Gamboa | Home</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="assets/images/coffeebean-16-195484.png">
 </head>
 <body>
   <div class="content">
     <header>
-      <div class="wrapper">
-      <span class="logo"><h1>German Gamboa</h1></span>
-      <nav>
-        <ul><a href="index.html">Home</a></ul>
-        <ul><a href="portfolio.html">Portfolio</a></ul>
-        <ul><a href="contact.html">Contact</a></ul>
-      </nav>
-    </div>
+    <div class="wrapper">
+        <span class="logo"><p>German Gamboa</p></span>
+        <nav>
+          <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+
+    </div> <!--End of nav wrapper -->
     </header>
   <section class="container group">
     <h1>Portfolio</h1>
     <hr>
+
       <div class="card">
         <img src="assets/images/card_test.jpeg" alt="sample project img">
         <h3>Cookies</h3>
