--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -7,28 +7,32 @@
   <title>German Gamboa | Contact</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="assets/images/coffeebean-16-195484.png">
 </head>
 <body>
   <div class="content">
     <header>
-      <div class="wrapper">
-      <span class="logo"><h1>German Gamboa</h1></span>
-      <nav>
-        <ul><a href="index.html">Home</a></ul>
-        <ul><a href="portfolio.html">Portfolio</a></ul>
-        <ul><a href="contact.html">Contact</a></ul>
-      </nav>
-    </div>
+    <div class="wrapper">
+        <span class="logo"><p>German Gamboa</p></span>
+        <nav>
+          <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+
+    </div> <!--End of nav wrapper -->
     </header>
   <section class="container">
-    <h1>Contact</h1>
+    <h2>Contact</h2>
     <hr>
-    <form action="">
-    
+    <form action="POST">
+
         <label for="name">Name:</label>
-        <input id="name" type="text" name="" value="">
+        <input id="name" type="text" name="name" value="">
         <label for="email">Email:</label>
-        <input id="email" type="text" name="" value="">
+        <input id="email" type="text" name="email" value="">
         <label for="msg">Message:</label>
         <textarea id="msg" name="name" rows="8" cols="80"></textarea>
 
