initial responsive set up

--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
   <div class="content">
     <header>
     <div class="wrapper">
-        <span class="logo"><p>German Gamboa</p></span>
+        <div class="logo"><p>German Gamboa</p></div>
         <nav>
           <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a class="active"  href="portfolio.html">Portfolio</a></li>
           <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -27,35 +27,67 @@
   <section class="container group">
     <h1>Portfolio</h1>
     <hr>
+      <div class="row">
 
-      <div class="card">
-        <img src="assets/images/card_test.jpeg" alt="sample project img">
-        <h3>Cookies</h3>
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/images/card_test.jpeg" alt="sample project img">
+            <div class="card-content">
+            <h3><a href="#">Cookies</a></h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/images/card_test.jpeg" alt="sample project img">
+            <div class="card-content">
+            <h3><a href="#">Cookies</a></h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/images/card_test.jpeg" alt="sample project img">
+            <div class="card-content">
+            <h3><a href="#">Cookies</a></h3>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card">
-        <img src="assets/images/card_test.jpeg" alt="sample project img">
-        <h3>Cookies</h3>
-      </div>
-      <div class="card">
-        <img src="assets/images/card_test.jpeg" alt="sample project img">
-        <h3>Cookies</h3>
-      </div>
-      <div class="card">
-        <img src="assets/images/card_test.jpeg" alt="sample project img">
-        <h3>Cookies</h3>
-      </div>
-      <div class="card">
-        <img src="assets/images/card_test.jpeg" alt="sample project img">
-        <h3>Cookies</h3>
-      </div>
-      <div class="card">
-        <img src="assets/images/card_test.jpeg" alt="sample project img">
-        <h3>Cookies</h3>
-      </div>
+
+      <div class="row">
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/images/card_test.jpeg" alt="sample project img">
+            <div class="card-content">
+            <h3><a href="#">Cookies</a></h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/images/card_test.jpeg" alt="sample project img">
+            <div class="card-content">
+            <h3><a href="#">Cookies</a></h3>
+            </div>
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="card">
+            <img src="assets/images/card_test.jpeg" alt="sample project img">
+            <div class="card-content">
+            <h3><a href="#">Cookies</a></h3>
+            </div>
+          </div>
+        </div>
+        </div>
+
 
 
   </section>
 </div>
+
+
   <footer>
     <p>German Gamboa &copy; 2018</p>
   </footer>
