--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
   <header>
   <div class="wrapper">
-      <span class="logo"><p>German Gamboa</p></span>
+      <div class="logo"><p>German Gamboa</p></div>
       <nav>
         <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="index.html">Home</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
         </ul>
