Cleaned up the code

--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,25 +10,29 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="icon" href="assets/images/coffeebean-16-195484.png">
 </head>
+
 <body>
   <div class="content">
     <header>
-    <div class="wrapper">
-        <div class="logo"><p>German Gamboa</p></div>
+      <div class="wrapper">
+        <div class="logo">
+          <p>German Gamboa</p>
+        </div>
         <nav>
           <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a class="active"  href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a class="active" href="contact.html">Contact</a></li>
           </ul>
         </nav>
 
-    </div> <!--End of nav wrapper -->
+      </div>
+      <!--End of nav wrapper -->
     </header>
-  <section class="container">
-    <h2>Contact</h2>
-    <hr>
-    <form action="POST">
+    <section class="container">
+      <h1>Contact</h1>
+      <hr>
+      <form action="POST">
 
         <label for="name">Name:</label>
         <input id="name" type="text" name="name" value="">
@@ -36,14 +41,15 @@
         <label for="msg">Message:</label>
         <textarea id="msg" name="name" rows="8" cols="80"></textarea>
 
-      <button type="button" name="button">Submit</button>
-    </form>
+        <button type="button" name="button">Submit</button>
+      </form>
 
-  </section>
+    </section>
   </div>
   <footer>
     <p>German Gamboa &copy; 2018</p>
   </footer>
 
 </body>
+
 </html>
