--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,34 +11,44 @@
   <link rel="icon" href="assets/images/coffeebean-16-195484.png">
 
 </head>
+
 <body>
   <div class="content">
 
-  <header>
-  <div class="wrapper">
-      <div class="logo"><p>German Gamboa</p></div>
-      <nav>
-        <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+    <header>
+      <div class="wrapper">
+        <div class="logo">
+          <p>German Gamboa</p>
+        </div>
+        <nav>
+          <ul>
+            <li><a class="active" href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
 
-  </div> <!--End of nav wrapper -->
-  </header>
+      </div>
+      <!--End of nav wrapper -->
+    </header>
 
-  <section class="container about-me">
-    <h1>About Me</h1>
-    <hr>
-    <img src="assets/images/IMG_0436.jpg" alt="A picture of German">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam incidunt laboriosam dolorem natus, aut porro ipsum consequuntur commodi itaque voluptatem reiciendis maxime blanditiis eveniet illum quidem obcaecati officiis placeat ratione, facere assumenda! Sapiente iste, perspiciatis expedita dicta incidunt inventore saepe similique ipsam sequi repudiandae odit ducimus sed aliquam rem itaque ut, porro ullam vel eius quaerat suscipit iure, asperiores tempore autem. Porro quod, neque veniam recusandae consectetur eveniet repellat quasi ratione harum totam accusamus id dolor iste, deleniti quo voluptatibus assumenda ad sapiente praesentium hic ullam! Porro inventore pariatur, quisquam magni. Voluptas repellat eaque provident temporibus at perspiciatis aperiam accusamus.</p>
-  </section> <!--End of about me section -->
+    <section class="container about-me">
+      <h1>About Me</h1>
+      <hr>
+      <img src="assets/images/IMG_0436.jpg" alt="A picture of German">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam incidunt laboriosam dolorem natus, aut porro ipsum consequuntur commodi itaque voluptatem reiciendis maxime blanditiis eveniet illum quidem obcaecati officiis placeat ratione, facere
+        assumenda! Sapiente iste, perspiciatis expedita dicta incidunt inventore saepe similique ipsam sequi repudiandae odit ducimus sed aliquam rem itaque ut, porro ullam vel eius quaerat suscipit iure, asperiores tempore autem. Porro quod, neque veniam
+        recusandae consectetur eveniet repellat quasi ratione harum totam accusamus id dolor iste, deleniti quo voluptatibus assumenda ad sapiente praesentium hic ullam! Porro inventore pariatur, quisquam magni. Voluptas repellat eaque provident temporibus
+        at perspiciatis aperiam accusamus.</p>
+    </section>
+    <!--End of about me section -->
 
-</div> <!--End of main content section-->
+  </div>
+  <!--End of main content section-->
   <footer>
     <p>German Gamboa &copy; 2018</p>
   </footer>
 
 </body>
+
 </html>
