--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,31 +10,35 @@
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="icon" href="assets/images/coffeebean-16-195484.png">
 </head>
+
 <body>
   <div class="content">
     <header>
-    <div class="wrapper">
-        <div class="logo"><p>German Gamboa</p></div>
+      <div class="wrapper">
+        <div class="logo">
+          <p>German Gamboa</p>
+        </div>
         <nav>
           <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active"  href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
 
-    </div> <!--End of nav wrapper -->
+      </div>
+      <!--End of nav wrapper -->
     </header>
-  <section class="container group">
-    <h1>Portfolio</h1>
-    <hr>
+    <section class="container group">
+      <h1>Portfolio</h1>
+      <hr>
       <div class="row">
 
         <div class="col-4">
           <div class="card">
             <img src="assets/images/card_test.jpeg" alt="sample project img">
             <div class="card-content">
-            <h3><a href="#">Cookies</a></h3>
+              <h3><a href="#">Cookies</a></h3>
             </div>
           </div>
         </div>
@@ -41,7 +46,7 @@
           <div class="card">
             <img src="assets/images/card_test.jpeg" alt="sample project img">
             <div class="card-content">
-            <h3><a href="#">Cookies</a></h3>
+              <h3><a href="#">Cookies</a></h3>
             </div>
           </div>
         </div>
@@ -49,7 +54,7 @@
           <div class="card">
             <img src="assets/images/card_test.jpeg" alt="sample project img">
             <div class="card-content">
-            <h3><a href="#">Cookies</a></h3>
+              <h3><a href="#">Cookies</a></h3>
             </div>
           </div>
         </div>
@@ -60,7 +65,7 @@
           <div class="card">
             <img src="assets/images/card_test.jpeg" alt="sample project img">
             <div class="card-content">
-            <h3><a href="#">Cookies</a></h3>
+              <h3><a href="#">Cookies</a></h3>
             </div>
           </div>
         </div>
@@ -68,7 +73,7 @@
           <div class="card">
             <img src="assets/images/card_test.jpeg" alt="sample project img">
             <div class="card-content">
-            <h3><a href="#">Cookies</a></h3>
+              <h3><a href="#">Cookies</a></h3>
             </div>
           </div>
         </div>
@@ -76,16 +81,16 @@
           <div class="card">
             <img src="assets/images/card_test.jpeg" alt="sample project img">
             <div class="card-content">
-            <h3><a href="#">Cookies</a></h3>
+              <h3><a href="#">Cookies</a></h3>
             </div>
           </div>
         </div>
-        </div>
+      </div>
 
 
 
-  </section>
-</div>
+    </section>
+  </div>
 
 
   <footer>
@@ -94,4 +99,5 @@
 
 
 </body>
+
 </html>
