Changed some styles

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,10 @@
     </section>
   </div>
   <footer>
-    <p>German Gamboa &copy; 2018</p>
+    <div class="wrapper">
+      <p>German Gamboa &copy; 2018</p>
+    </div>
+
   </footer>
 
 </body>
