styles are now done.

--- a/contact.html
+++ b/contact.html
@@ -32,34 +32,34 @@
     </header>
     <div class="wrapper">
       <div class="row">
-    <section  class="contact-floats  container col-8">
-        <h1>Contact</h1>
+        <section class="contact-floats  container col-8">
+          <h1>Contact</h1>
 
-        <hr>
-        <form action="POST">
+          <hr>
+          <form action="POST">
 
-          <label for="name">Name:</label>
-          <input id="name" type="text" name="name" value="">
-          <label for="email">Email:</label>
-          <input id="email" type="text" name="email" value="">
-          <label for="msg">Message:</label>
-          <textarea id="msg" name="name" rows="8" cols="80"></textarea>
+            <label for="name">Name:</label>
+            <input id="name" type="text" name="name" value="">
+            <label for="email">Email:</label>
+            <input id="email" type="text" name="email" value="">
+            <label for="msg">Message:</label>
+            <textarea id="msg" name="name" rows="8" cols="80"></textarea>
 
-          <button type="button" name="button">Submit</button>
-        </form>
+            <button type="button" name="button">Submit</button>
+          </form>
 
-    </section>
-    <aside class="contact-floats container col-2">
-      <h2>Social Media</h2>
-      <ul>
-        <li><img class="icon" src="assets/images/facebook-square.svg" alt=""></li>
-        <li><img class="icon" src="assets/images/github.svg" alt=""></li>
-        <li><img class="icon" src="assets/images/youtube.svg" alt=""></li>
-        <li><img class="icon" src="assets/images/twitter-square.svg" alt=""></li>
-      </ul>
-    </aside>
+        </section>
+        <aside class="contact-floats  col-2">
+          <h2>Social Media</h2>
+          <ul>
+            <li><a href="https://www.facebook.com/german.gamboagonzalez" target="_blank"><img class="icon" src="assets/images/facebook-square.svg" alt=""></a></li>
+            <li><a href="https://github.com/germangamboa95" target="_blank"><img class="icon" src="assets/images/github.svg" alt=""></a></li>
+            <li><a href="https://www.youtube.com/channel/UC0y_YVXOGge141aAoNiaeRg?view_as=subscriber" target="_blank"><img class="icon" src="assets/images/youtube.svg" alt=""></a></li>
+            <li><a href="https://twitter.com/GermanGamGon" target="_blank"><img class="icon" src="assets/images/twitter-square.svg" alt=""></a></li>
+          </ul>
+        </aside>
+      </div>
     </div>
-  </div>
   </div>
 
   <footer>
