--- a/portfolio.html
+++ b/portfolio.html
@@ -32,61 +32,48 @@
     <section class="container group">
       <h1>Portfolio</h1>
       <hr>
-      <div class="row">
 
-        <div class="col-4">
-          <div class="card">
-            <img src="assets/images/card_test.jpeg" alt="sample project img">
-            <div class="card-content">
-              <h3><a href="#">Cookies</a></h3>
+      <div class="row">
+        <div class="card col-5">
+          <img src="https://images.pexels.com/photos/607812/pexels-photo-607812.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+          <div class="overlay">
+            <div class="text">
+              <h3>SOC Manager</h3>
+              <p>A social media manager.</p>
             </div>
           </div>
         </div>
-        <div class="col-4">
-          <div class="card">
-            <img src="assets/images/card_test.jpeg" alt="sample project img">
-            <div class="card-content">
-              <h3><a href="#">Cookies</a></h3>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card">
-            <img src="assets/images/card_test.jpeg" alt="sample project img">
-            <div class="card-content">
-              <h3><a href="#">Cookies</a></h3>
+        <div class="card col-5">
+          <img src="https://images.pexels.com/photos/89955/pexels-photo-89955.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="">
+          <div class="overlay">
+            <div class="text">
+              <h3>DarkTheme All The Things</h3>
+              <p>App that dark themes everything!</p>
             </div>
           </div>
         </div>
       </div>
 
       <div class="row">
-        <div class="col-4">
-          <div class="card">
-            <img src="assets/images/card_test.jpeg" alt="sample project img">
-            <div class="card-content">
-              <h3><a href="#">Cookies</a></h3>
+        <div class="card col-5">
+          <img src="https://images.pexels.com/photos/38271/ipad-map-tablet-internet-38271.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" alt="">
+          <div class="overlay">
+            <div class="text">
+              <h3>UBER Late</h3>
+              <p>Find out why your driver is late!</p>
             </div>
           </div>
         </div>
-        <div class="col-4">
-          <div class="card">
-            <img src="assets/images/card_test.jpeg" alt="sample project img">
-            <div class="card-content">
-              <h3><a href="#">Cookies</a></h3>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="card">
-            <img src="assets/images/card_test.jpeg" alt="sample project img">
-            <div class="card-content">
-              <h3><a href="#">Cookies</a></h3>
+        <div class="card col-5">
+          <img src="https://images.pexels.com/photos/242492/pexels-photo-242492.jpeg?h=350&dpr=2&auto=compress&cs=tinysrgb" alt="">
+          <div class="overlay">
+            <div class="text">
+              <h3>Doors Mobile</h3>
+              <p>Making Windows failed mobile OS great again!</p>
             </div>
           </div>
         </div>
       </div>
-
 
 
     </section>
