--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
 
 <body>
   <div class="content group">
-    <header>
-      <div class="wrapper">
+    <header class="group">
+      <div class="wrapper group">
         <div class="logo">
           <p>German Gamboa</p>
         </div>
-        <nav>
+        <nav class="group">
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
