--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 </head>
 
 <body>
-  <div class="content">
+  <div class="content group">
 
-    <header>
-      <div class="wrapper">
+    <header class="group">
+      <div class="wrapper group">
         <div class="logo">
           <p>German Gamboa</p>
         </div>
-        <nav>
+        <nav class="group">
           <ul>
             <li><a class="active" href="index.html">Home</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -42,7 +42,7 @@
       <br>
     </section>
 
-    <section class="container group">
+    <section class="container blog-post group">
       <h1>Blog Posts</h1>
       <hr>
       <h2>UCF Boot Camp Day One</h2>
