--- a/portfolio.html
+++ b/portfolio.html
@@ -12,23 +12,22 @@
 </head>
 
 <body>
-  <div class="content">
-    <header>
-      <div class="wrapper">
-        <div class="logo">
-          <p>German Gamboa</p>
-        </div>
-        <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-          </ul>
-        </nav>
-
+  <header class="group">
+    <div class="wrapper group">
+      <div class="logo">
+        <p>German Gamboa</p>
       </div>
-      <!--End of nav wrapper -->
-    </header>
+      <nav class="group">
+        <ul>
+          <li><a  href="index.html">Home</a></li>
+          <li><a class="active" href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+
+    </div>
+    <!--End of nav wrapper -->
+  </header>
     <section class="container group">
       <h1>Portfolio</h1>
       <hr>
@@ -77,7 +76,6 @@
 
 
     </section>
-  </div>
 
 
   <footer>
