added loading animations

--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
   <footer>
     <p>German Gamboa &copy; 2018</p>
   </footer>
+  <script type="text/javascript">
+    window.onload = () =>{
+      let x = document.querySelectorAll('.container');
+      for(let i in x){
+        x[i].classList.add('animated', 'zoomIn');
+      }
+    }
+  </script>
 
 </body>
 
