--- a/contact.html
+++ b/contact.html
@@ -68,6 +68,14 @@
     </div>
 
   </footer>
+  <script type="text/javascript">
+    window.onload = () =>{
+      let x = document.querySelectorAll('.contact-floats ');
+      for(let i in x){
+        x[i].classList.add('animated', 'zoomIn');
+      }
+    }
+  </script>
 </body>
 
 </html>
